--- a/demo.html
+++ b/demo.html
@@ -22,7 +22,7 @@
   <h2>Exercise 1 </h2>
   <p>write a function to manipulate dom and change the background color of your browser to your favorite color</p>
 
-  <p><button onclick="changeBackgroundColor()">Click Me</button></p>
+  <p><button id='button' onclick="changeBackgroundColor()">Click Me</button></p>
   <div id="container">
     <p>my color</p>
   </div>
